--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -15,4 +15,14 @@
         <attr name="progressLayout" format="reference|color" />
         <attr name="horizontalProgressLayout" format="reference|color" />
     </declare-styleable>
+
+    <declare-styleable name="ADBannerView">
+        <attr name="defaultImageDrawable" format="reference" />
+        <attr name="intervalTime" format="integer" />
+        <attr name="indexPosition">
+            <enum name="right" value="0x100" />
+            <enum name="bottom" value="0x101" />
+        </attr>
+        <attr name="indexColor" format="color" />
+    </declare-styleable>
 </resources>
